<resources>
    <string name="app_name">Coffee Order</string>
    <string name="image_logo">Image Logo</string>
    <string name="name">Name</string>
    <string name="your_name">Enter your name:</string>
    <string name="enter_your_password">Enter your password:</string>
    <string name="welcome">Welcome!</string>
    <string name="default_name">Client</string>
    <string name="default_password">password</string>
    <string name="make_order">Make Order</string>
    <string name="warning_fill_fields">Name and Password must not be empty!</string>
    <string name="chose_your_drink">Chose your drink</string>
    <string name="send_order">Send order!</string>
    <string name="lemon">Lemon</string>
    <string name="sugar">Sugar</string>
    <string name="milk">Milk</string>
    <string name="additions">What would you like to add in your %s?</string>
    <string name="coffee">Coffee ☕</string>
    <string name="tea">Tea 🫖</string>
    <string name="hello_user">Hello, %s! What would you like to drink?</string>
    <string name="order">Name: %s
Password: %s
Drink: %s
Drink type: %s
</string>
    <string name="need_additions">Necessary additions: </string>

    <string-array name="options_of_coffee">
        <item>Ristretto</item>
        <item>Espresso</item>
        <item>Americano</item>
        <item>Cappuccino</item>
        <item>Latte</item>
    </string-array>

    <string-array name="options_of_tea">
        <item>Green</item>
        <item>Earl Gray</item>
        <item>Forest Fruits</item>
        <item>Chamomile</item>
        <item>Mint</item>
    </string-array>
</resources>