<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/light_brown">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="match_parent"
        android:layout_weight="1"
        android:layout_height="0dp"
        android:src="@drawable/logo"
        android:contentDescription="@string/image_logo"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:gravity="center|center_vertical"
        android:text="@string/welcome"
        android:textSize="36sp"
        android:textColor="@color/white"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/etPersonName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/your_name"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:ems="10"
        android:hint="@string/enter_your_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:textStyle="bold"
        tools:ignore="TouchTargetSizeCheck" />

    <Button
        android:id="@+id/btnMakeOrder"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/make_order"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:backgroundTint="@color/white"
        android:textColor="@color/dark_brown"/>

</LinearLayout>