<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/light_brown"
    tools:context=".CreateOrderActivity">

    <TextView
        android:id="@+id/tvWelcoming"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:text="@string/hello_user"
        android:textSize="24sp"
        android:textStyle="bold"
        android:gravity="center"
        android:textColor="@color/dark_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <RadioGroup
        android:id="@+id/radioGroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvWelcoming">

        <RadioButton
            android:id="@+id/rbTea"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:checked="true"
            android:onClick="onClickChangeDrink"
            android:text="@string/tea" />

        <RadioButton
            android:id="@+id/rbCoffee"
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:onClick="onClickChangeDrink"
            android:text="@string/coffee" />
    </RadioGroup>

    <TextView
        android:id="@+id/tvAdditions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/additions"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/dark_brown"
        android:gravity="center"
        app:layout_constraintTop_toBottomOf="@+id/radioGroup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        />

    <CheckBox
        android:id="@+id/cbMilk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/milk"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvAdditions"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/cbSugar"/>

    <CheckBox
        android:id="@+id/cbSugar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sugar"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvAdditions"
        app:layout_constraintStart_toEndOf="@+id/cbMilk"
        app:layout_constraintEnd_toStartOf="@+id/cbLemon"
        />

    <CheckBox
        android:id="@+id/cbLemon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/lemon"
        android:layout_margin="8dp"
        android:textColor="@color/white"
        app:layout_constraintTop_toBottomOf="@+id/tvAdditions"
        app:layout_constraintStart_toEndOf="@+id/cbSugar"
        app:layout_constraintEnd_toEndOf="parent"
        />

    <TextView
        android:id="@+id/tvDrinkChose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/chose_your_drink"
        android:textSize="24sp"
        android:layout_margin="8dp"
        android:textStyle="bold"
        android:textColor="@color/dark_brown"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cbSugar" />


    <Spinner
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:id="@+id/spinnerTea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_tea"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkChose"
        tools:ignore="TouchTargetSizeCheck" />

    <Spinner
        android:layout_margin="8dp"
        android:textColor="@color/white"
        android:id="@+id/spinnerCoffee"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:entries="@array/options_of_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvDrinkChose"
        android:visibility="invisible"
        />

    <ImageView
        android:id="@+id/ivButtonSendOrder"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_margin="8dp"
        android:contentDescription="@string/send_order"
        android:onClick="onClickSendOrder"
        app:srcCompat="@drawable/button"
        app:layout_constraintTop_toBottomOf="@+id/spinnerCoffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>


</androidx.constraintlayout.widget.ConstraintLayout>